CHORE: Fix vertical spacing for footnote. (#1317)

--- a/aemedge/blocks/footnote/footnote.css
+++ b/aemedge/blocks/footnote/footnote.css
@@ -21,11 +21,11 @@
   margin-block: var(--udexSpacer40);
 
   &:first-child {
-    margin-block: 0;
+    margin-block-start: 0;
   }
 
   &:last-child {
-    margin-block: 0;
+    margin-block-end: 0;
   }
 
   @media (width >= 980px) {
